--- a/index.html
+++ b/index.html
@@ -21,19 +21,19 @@
 <body>
     <table id="board">
         <tr>
-          <td class="cell" id="cell-0"></td>
-          <td class="cell" id="cell-1"></td>
-          <td class="cell" id="cell-2"></td>
+          <td class="cell cell-0" id="cell-0"></td>
+          <td class="cell cell-1" id="cell-1"></td>
+          <td class="cell cell-2" id="cell-2"></td>
         </tr>
         <tr>
-          <td class="cell" id="cell-3"></td>
-          <td class="cell" id="cell-4"></td>
-          <td class="cell" id="cell-5"></td>
+          <td class="cell cell-3" id="cell-3"></td>
+          <td class="cell cell-4" id="cell-4"></td>
+          <td class="cell cell-5" id="cell-5"></td>
         </tr>
         <tr>
-          <td class="cell" id="cell-6"></td>
-          <td class="cell" id="cell-7"></td>
-          <td class="cell" id="cell-8"></td>
+          <td class="cell cell-6" id="cell-6"></td>
+          <td class="cell cell-7" id="cell-7"></td>
+          <td class="cell cell-8" id="cell-8"></td>
         </tr>
       </table>
   <button id="reset">Reset</button>
