--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <title>Have fun :D</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="icon.ico">
   <style>
     table {
       border-collapse: collapse;
